force-app/main/default/objects/Account/fields/Adhar_Numner__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Numner__c</fullName>
    <label>Adhar Number</label>
    <length>120</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>