force-app/main/default/objects/Account/fields/Date_time_Detaling__c.field-meta.xml
<CustomField>
    <fullName>Date_time_Detaling__c</fullName>
    <label>Date time Detaling</label>
    <type>DateTime</type>
</CustomField>