force-app/main/default/objects/Account/fields/Outstanding_Payments__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Payments__c</fullName>
    <label>Outstanding Payments</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>