force-app/main/default/objects/Account/fields/Primary_contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>