force-app/main/default/objects/Account/fields/Total_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Revenue__c</fullName>
    <label>Total Sales Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>