force-app/main/default/objects/Account/validationRules/Account_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AccountNumber)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>account number is mondatory</errorMessage>
</ValidationRule>