force-app/main/default/objects/Account/validationRules/valid_rule_on_number.validationRule-meta.xml
<ValidationRule>
    <fullName>valid_rule_on_number</fullName>
    <active>true</active>
    <errorConditionFormula>Test_Number__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>Test_Number__c</errorDisplayField>
    <errorMessage>enter number less than 1</errorMessage>
</ValidationRule>